Update tundikhel link

--- a/docs/templates/documentation.html
+++ b/docs/templates/documentation.html
@@ -464,7 +464,7 @@
                 </div>
             </div>
             <a href="/docs" class="highlight">OpenAPI Docs</a>
-            <a href="https://tundikhel.nes.newnepal.org" target="_blank" rel="noopener noreferrer" class="highlight-alt">Tundikhel</a>
+            <a href="https://tundikhel.newnepal.org" target="_blank" rel="noopener noreferrer" class="highlight-alt">Tundikhel</a>
         </nav>
         
         <div class="content">
