Add Site Status link to navigation

--- a/docs/templates/documentation.html
+++ b/docs/templates/documentation.html
@@ -147,6 +147,15 @@
             background-color: #15803d;
         }
         
+        nav a.status-link {
+            background-color: #f59e0b;
+            color: white;
+        }
+        
+        nav a.status-link:hover {
+            background-color: #d97706;
+        }
+        
         .dropdown {
             position: relative;
             display: inline-block;
@@ -465,6 +474,7 @@
             </div>
             <a href="/docs" class="highlight">OpenAPI Docs</a>
             <a href="https://tundikhel.newnepal.org" target="_blank" rel="noopener noreferrer" class="highlight-alt">Tundikhel</a>
+            <a href="https://stats.uptimerobot.com/lwVRcc5suC" target="_blank" rel="noopener noreferrer" class="status-link">Site Status</a>
         </nav>
         
         <div class="content">
